Closed
Bug 203992
Opened 22 years ago
Closed 22 years ago
Bookmark's Notify/schedule fail to prompt user when change has occured
Categories
(SeaMonkey :: Bookmarks & History, defect, P3)
SeaMonkey
Bookmarks & History
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4final
People
(Reporter: chrispetersen, Assigned: janv)
References
Details
(Keywords: regression, Whiteboard: [adt2])
Attachments
(1 file)
|
6.05 KB,
patch
|
jag+mozilla
:
review+
bryner
:
superreview+
asa
:
approval1.4+
|
Details | Diff | Splinter Review |
Build: 2003-04-28-03
Platform: All
Expected Results: After specifying a time schedule and notification method for a
bookmark,the application should prompt user when a change occurs.
What I got: No notification is occurs when page is updated.
Steps to reproduce:
1) Bookmark a news site that recieves frequent updates like www.cnn.com
2) Go to Manage bookmarks and select this bookmark. Press Properties.
3) Click on the schedule tab. Select everyday - from: midnight to: 11 pm. Every
2 minutes.
4) Click on Notify tab. Enable all notifications. Click OK.
5) Go to another site that isn't the bookmarked site.
6) The notification doesn't occur.
| Reporter | ||
Updated•22 years ago
|
Summary: Bookmark's Notify/schedule fail to prompt when change has occured → Bookmark's Notify/schedule fail to prompt user when change has occured
| Reporter | ||
Updated•22 years ago
|
Keywords: regression
Comment 2•22 years ago
|
||
I get exactly the opposite behaviour.
To test it, I have tried first with www.cnn.com and i got a notification every
single minute.
Then I have also tried it with websites like www.openzaurus.org that are not
updates very often. Still i get a notify every single minute.
Comment 3•22 years ago
|
||
maybe it is a duplicate of 199257?
Comment 4•22 years ago
|
||
I have installed mozilla 1.4a (build ID: 2003040105).
The notify option seems not to work anymore.
What I have noticed though, is that in version 1.3 it worked except for the
change of icon (sometimes it worked too often).
In version 1.4a the change of icon occurs only to the bookmarks that were
selected by version 1.3 (meaning that it doesn't know which website has changed
but it remember what vesion 1.3 knew).
Comment 5•22 years ago
|
||
adt: nsbeta1+/adt2
Comment 6•22 years ago
|
||
The popup notification stopped working totally for me. My bookmark is set to go
to http://www.mcafeeb2b.com/naicommon/download/dats/find.asp which is guaranteed
to change once a week (more often than that usually though).
This is on Mozilla1.4b on Windows 2000, sp3.
Comment 7•22 years ago
|
||
Scheduler doen't do anything sinca about a month. now using 2003052309.
Flags: blocking1.4?
Comment 8•22 years ago
|
||
Notify/Schedule worked for me with 1.3 but does nothing after upgrading to 1.4b
[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.4b) Gecko/20030507].
Testcase: Notification for the daily Dilbert http://www.dilbert.com/ no longer
appears. No HTTP HEAD requests appear in the proxy log.
Comment 9•22 years ago
|
||
This feature is totally broken and has been for ages - I've been testing Mozilla
since M18, and the bookmark notification never worked. Bug 107268 is also about
that issue, but there's nothing happening about it.
This also is *not* a regresseion - as I said, I tested this since M18, on both
Linux and Windows, different machines, and it never worked at all. It obviously
works under some circumstances (see other reports), but it was never reliable.
So, "regression" should be removed.
| Assignee | ||
Comment 10•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.4final
| Assignee | ||
Updated•22 years ago
|
Attachment #124365 -
Flags: review?(jaggernaut)
Comment 11•22 years ago
|
||
Comment on attachment 124365 [details] [diff] [review]
patch
sr=jag
Attachment #124365 -
Flags: review?(jaggernaut) → review+
| Assignee | ||
Comment 12•22 years ago
|
||
Comment on attachment 124365 [details] [diff] [review]
patch
jag probably meant r=jag
Attachment #124365 -
Flags: superreview?(bryner)
Attachment #124365 -
Flags: approval1.4?
Updated•22 years ago
|
Attachment #124365 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 13•22 years ago
|
||
fixed on the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 14•22 years ago
|
||
*** Bug 107268 has been marked as a duplicate of this bug. ***
Comment 15•22 years ago
|
||
Is the fix already in some nightly build I can download - I guess it would be in
latest-nightly?
And will this make 1.4 final - would be good to have this feature finally
working, especially if 1.4 is to be the last release of the "old" suite.
| Assignee | ||
Comment 16•22 years ago
|
||
Yes, it should be in the latest nightly, I landed the patch in the morning.
It might make 1.4 final if approved.
Comment 17•22 years ago
|
||
I'm sorry, but this patch doesn't do it for me. I created a new profile, started
the latest nightly, and set up some bookmarks to be monitored for change.
One of them is www.cnn.com, and I get a notification every minute now.
Others I tried:
http://www.spiegel.de
http://www.heise.de
http://www.welt.de
http://www.heise.de/newsticker
http://www.heise.de/newsticker/data/em-30.05.03-000/
The last one here is an article which has a user forum, and is updated very
often (every time a user writes something). The page is created as static html,
not dynamically from a database.
With all these urls, I don't get any notofications at all, except like I said
cnn, which gets an alert every minute.
I fear the bug has to be re-opened :-(
Comment 18•22 years ago
|
||
An update: I now deleted the cnn bookmark, but still get notifications the site
has changed - I don't think this should be happening.
| Assignee | ||
Comment 19•22 years ago
|
||
This bug is about a regression which appeared after bookmarks rewrite to use
unique IDs. These IDs were used instead of urls, so it was absolutely impossible
to get a notification, since an ID looks like rdf:#$8L0BJ3
I believe that there are other bugs related to this feature, but they are *not*
part of this bug report.
This patch should make things behave just like it was before 1.4a.
| Assignee | ||
Comment 20•22 years ago
|
||
for example, see bug 110044
Comment 21•22 years ago
|
||
Ok, thanks for the explanation - in this case, bug 107268 is not a dplicate of
this bug. since that one is open since 2001.
Comment 22•22 years ago
|
||
Comment on attachment 124365 [details] [diff] [review]
patch
a=asa (on behalf of drivers) for checkin to the 1.4 branch.
Attachment #124365 -
Flags: approval1.4? → approval1.4+
Comment 23•22 years ago
|
||
a=adt. Please land this fix on the Mozilla 1.4 branch and add fixed1.4 to the
staus whiteboard
| Reporter | ||
Comment 24•22 years ago
|
||
Verifying this is fixed on the trunk builds: (2003-06-02-08) Macho and
(2003-06-02-08) Win32. This fix missed todays branch (06/02) but will be in
tomorrow's branch. Need to check that build when it becomes available..
| Reporter | ||
Comment 25•22 years ago
|
||
BTW, I tested this on cnn's site and mac.com (my personal homepage). I recieved
a alert when the content had been updated based on my notification schedule setting.
Comment 27•22 years ago
|
||
Solaris build 2003060304 works fine.
Is there any way to change also the icon in the bookmarks Sidebar?
It would be a nice feature, I believe.
Comment 28•22 years ago
|
||
I still get a weird problem with the website www.openzaurus.org. I get a
notification every minute altough it didn't change in the meanwhile.
I am not sure if it is related with the bug 110044
| Reporter | ||
Comment 29•22 years ago
|
||
Ok, This specific problem is fixed on the (06/03)branch. There are remaining
issues like bug 110044.
Keywords: fixed1.4 → verified1.4
Comment 30•22 years ago
|
||
Hi, since there seem to be a few people around here who know something about the
bookmark scheduling mechanism, could you please take a look at bug 207814 - that
is the new meta bug about the scheduler not working properly, which has been
created since the last bug tracking these issues was marked duplicate in error.
So, anyone who feels she/he can contribute to the bookmark scheduler, please
look at bug 207814. Thanks.
Updated•22 years ago
|
Flags: blocking1.4?
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•