Fix for bug 203992. Bookmark's Notify/schedule fail to prompt user when change has occured. r=jag, sr=bryner